[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/inimigos/carrinho_lego/carrinho_lego3.png" type="Texture" id=1]
[ext_resource path="res://scripts/inimigos/carrinho_lego.gd" type="Script" id=2]
[ext_resource path="res://sprites/inimigos/carrinho_lego/carrinho_lego1.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/carrinho_lego/carrinho_lego2.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/carrinho_lego/carrinho_lego4.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.2523, 8.85178 )

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.678431 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.4514, 2.42902 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.8088, 9.19825 )

[node name="carrinho_lego" type="KinematicBody2D"]
position = Vector2( 99, 40 )
scale = Vector2( 0.5, 0.5 )
z_index = 5
collision_layer = 2
collision_mask = 105
script = ExtResource( 2 )

[node name="rotacao" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="rotacao"]
position = Vector2( 2.04738, 1.10243 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 20, 32 )

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
light_mask = 32
position = Vector2( -0.432801, 9.33928 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.574524, 0.928074 )
scale = Vector2( 0.535961, 0.429895 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/gosma_andando = SubResource( 2 )
anims/planeta_rosa = SubResource( 3 )

[node name="pisar_no_inimigo" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="pisar_no_inimigo"]
visible = false
position = Vector2( -0.157478, -4.25223 )
shape = SubResource( 4 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -7.71693, 2.66585 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 64

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 7.43631, 1.96431 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 64

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="colidir_com_player" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="colidir_com_player"]
visible = false
position = Vector2( -0.445961, 9.12457 )
shape = SubResource( 5 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="body_entered" from="pisar_no_inimigo" to="." method="pisar_no_inimigo"]
[connection signal="body_entered" from="colidir_com_player" to="." method="_on_enemy_body_entered"]
